--- a/descrizione.html
+++ b/descrizione.html
@@ -136,10 +136,11 @@
             <div class="col-md col-lg-5">
               <h3>Sorgensis</h3>
               <p>
-                Sorgensis è dove tutto ha avuto inizio. Si trova nel bel mezzo
-                del deserto in prossimità della fonte che fornisce acqua a tutta
-                la città. Nel tempo sono state costruite le strutture termali,
-                dove ribilanciare il proprio stato psicofisico. Qui a Sorgensis
+                Sorgensis è dove tutto ha avuto inizio. Si trova nel mezzo del
+                deserto in prossimità della <strong>fonte</strong> che fornisce
+                acqua a tutta la città. Nel tempo sono state costruite le
+                strutture termali, dove ribilanciare il proprio
+                <strong>stato psicofisico</strong>. Qui a Sorgensis
                 preoccupazioni e pensieri negativi spariscono immediatamente. E’
                 qui che riappacifichiamo il tuo rapporto con la Natura.
               </p>
@@ -167,10 +168,15 @@
             <div class="col-md col-lg-5">
               <h3>Centrisis</h3>
               <p>
-                È il quartiere dove è collocata la vita di Oasis e dei suoi
-                cittadini. Case, uffici, servizi essenziali, accademie, locali
-                notturni. E’ qui che giorno dopo giorno diamo vita alla città
-                del futuro e ritroverai il piacere di socializzare e lavorare.
+                È il quartiere dove è collocata la
+                <strong>vita di Oasis</strong> e dei suoi cittadini. Case,
+                uffici, servizi essenziali, accademie, locali notturni. E’ qui
+                che giorno dopo giorno diamo vita alla città del futuro e
+                ritroverai il piacere di socializzare e lavorare. È stata
+                costruita in un punto lontano da Sorgensis per permettere di
+                tenere debitamente separati <strong>lavoro</strong> e relax. Ci
+                teniamo che non veniate tentati dal riposo mentre state
+                guadagnando soldi.
               </p>
             </div>
           </div>
@@ -194,11 +200,13 @@
             <div class="col-md col-lg-5">
               <h3>Burocrasis</h3>
               <p>
-                È il quartiere amministrativo. È la casa della burocrazia e dove
-                ha sede la residenza del sindaco. Una zona necessaria per
-                mandare avanti la città. Nel quartiere palazzo gli eventi
-                mondani sono solo incontri formali per pensare al bene della
-                città
+                È il quartiere <strong>amministrativo</strong>. È la casa della
+                burocrazia e dove ha sede il palazzo del sindaco. Una zona
+                necessaria per mandare avanti la città e dove noi di Oasis ci
+                prendiamo cura di voi senza mai lamentarci. Nel quartiere
+                Burocrasis gli eventi mondani sono incontri formali per pensare
+                al bene della città, qui lavoriamo incessantemente per creare la
+                <strong>stirpe più perfetta</strong> per la Terra.
               </p>
             </div>
           </div>
@@ -210,11 +218,12 @@
           <h2 class="text-center">Dove siamo</h2>
           <p class="text-center mb-5">
             OASIS si trova nel mezzo del Deserto Occidentale, ma la sua
-            posizione è e deve rimanere strettamente segreta per impedire che
-            venga saccheggiata o attaccata dagli abitanti del Mondo Esterno in
-            lotta contro il nostro sistema elitario. Se sei interessato a
-            raggiungerci e ad abitare nella Culla del Tuo Futuro inviaci il form
-            compilato.
+            posizione è e deve rimanere
+            <strong>strettamente segreta</strong> per impedire che venga
+            saccheggiata o attaccata dagli abitanti del Mondo Esterno in lotta
+            contro il nostro <strong>sistema elitario</strong>. Se sei
+            interessato a raggiungerci e ad abitare nella Culla del Tuo Futuro
+            inviaci il form compilato.
           </p>
         </div>
         <img class="img-fluid w-100" src="img/img_desc4.jpg" alt="mappa" />
@@ -236,12 +245,12 @@
           border-bottom border-primary
         "
       >
-        <a class="nav-link" href="/index.html">Home</a>
-        <a class="nav-link" href="/descrizione.html">Descrizione</a>
-        <a class="nav-link" href="/storia.html">Storia</a>
-        <a class="nav-link" href="/servizi.html">Servizi</a>
-        <a class="nav-link" href="/eventi.html">Eventi</a>
-        <a class="nav-link" href="/unisciti.html">Unisciti a noi</a>
+        <a class="nav-link" href="./index.html">Home</a>
+        <a class="nav-link" href="./descrizione.html">Descrizione</a>
+        <a class="nav-link" href="./storia.html">Storia</a>
+        <a class="nav-link" href="./servizi.html">Servizi</a>
+        <a class="nav-link" href="./eventi.html">Eventi</a>
+        <a class="nav-link" href="./unisciti.html">Unisciti a noi</a>
       </nav>
       <!-- Copyright -->
       <p class="small text-center text-light py-3 mb-0">&copy; Oasis Inc.</p>
