--- a/servizi.html
+++ b/servizi.html
@@ -228,12 +228,12 @@
           border-bottom border-primary
         "
       >
-        <a class="nav-link" href="/index.html">Home</a>
-        <a class="nav-link" href="/descrizione.html">Descrizione</a>
-        <a class="nav-link" href="/storia.html">Storia</a>
-        <a class="nav-link" href="/servizi.html">Servizi</a>
-        <a class="nav-link" href="/eventi.html">Eventi</a>
-        <a class="nav-link" href="/unisciti.html">Unisciti a noi</a>
+        <a class="nav-link" href="./index.html">Home</a>
+        <a class="nav-link" href="./descrizione.html">Descrizione</a>
+        <a class="nav-link" href="./storia.html">Storia</a>
+        <a class="nav-link" href="./servizi.html">Servizi</a>
+        <a class="nav-link" href="./eventi.html">Eventi</a>
+        <a class="nav-link" href="./unisciti.html">Unisciti a noi</a>
       </nav>
       <!-- Copyright -->
       <p class="small text-center text-light py-3 mb-0">&copy; Oasis Inc.</p>
