--- a/storia.html
+++ b/storia.html
@@ -128,11 +128,13 @@
             <div class="col-md-5">
               <h3 class="h2">Preludio</h3>
               <p>
-                Anno 2020, inizia la pandemia da COVID-19. Mentre le attenzioni
-                del mondo sono rivolte alla gestione dei contagi, un piccolo
-                gruppo di scenziati fa una scoperta spaventosa. Il riscaldamento
+                Anno 2020, inizia la pandemia da
+                <strong>COVID-19</strong> COVID-19. Mentre le attenzioni del
+                mondo sono rivolte alla gestione dei contagi, un piccolo gruppo
+                di scenziati fa una scoperta spaventosa. Il riscaldamento
                 globale sta accelerando e le previsioni si avvereranno in
-                anticipo di almeno dieci anni. Alcuni imprenditori illuminati
+                anticipo di almeno dieci anni. Alcuni
+                <strong>imprenditori illuminati</strong>
                 iniziano a discutere di un nuovo progetto edilizio. La chiave di
                 tutto è
                 <strong>l’acqua.</strong>
@@ -167,9 +169,9 @@
                 desertificazione accelera ed è sempre più difficile produrre
                 cibo. Gruppi di persone migrano vicino alle poche fonti d'acqua
                 rimaste, causando non pochi conflitti - spesso anche armati. La
-                progettazione della città è completata, il sito di costruzione è
-                stato individuato in un oasi del deserto occidentale. Iniziano i
-                lavori di realizzazione di Oasis.
+                <strong>progettazione</strong> della città è completata, il sito
+                di costruzione è stato individuato in un oasi del deserto
+                occidentale. Iniziano i lavori di realizzazione di Oasis.
               </p>
             </div>
           </div>
@@ -194,10 +196,12 @@
             <div class="col-md-5">
               <h3 class="h2">OASIS prende forma</h3>
               <p>
-                Oasis è ultimata. In un mondo devastato da guerre Oasis è uno
-                dei pochi luoghi al mondo dove regna la pace. C’è crescita
-                economica, e durante questi anni vengono costruite le strutture
-                che porteranno alla nascita del servizio benessere.
+                Oasis è ultimata. In un mondo
+                <strong>devastato da guerre</strong> Oasis è uno dei pochi
+                luoghi al mondo dove regna la pace. C’è un periodo di
+                <strong>forte crescita economica</strong>, e durante questi anni
+                vengono costruite le strutture che porteranno alla nascita del
+                servizio benessere.
               </p>
             </div>
           </div>
@@ -224,10 +228,11 @@
               <p>
                 La crescita non dura però a lungo ed è necessario espandersi.
                 Una metropoli abbandonata a pochi chilometri di distanza sarà il
-                secondo nucleo di Oasis. Con un maggior numero di residenze sarà
-                più facile reclutare nuovi cittadini che lavorino per far
-                crescere Oasis. Nasce il servizio formazione per plasmare le
-                competenze necessarie.
+                <strong>secondo nucleo di Oasis</strong>. Con un maggior numero
+                di residenze sarà più facile reclutare
+                <strong>nuovi cittadini</strong> che lavorino per far crescere
+                Oasis. Nasce il servizio formazione per plasmare le competenze
+                necessarie.
               </p>
             </div>
           </div>
@@ -259,11 +264,12 @@
             <div class="col-md-5">
               <h3 class="h2">Il sogno dei fondatori continua ad essere vivo</h3>
               <p>
-                Negli anni l’amministrazione ha messo in piedi una struttura
-                organizzativa centralizzata per coordinare i lavori e fatto
-                costruire un quartier generale che è anche la residenza del
-                sindaco. I cittadini sono felici e non immaginano una vita fuori
-                da Oasis.
+                Negli anni l’amministrazione ha messo in piedi una
+                <strong>struttura organizzativa</strong> centralizzata per
+                coordinare i lavori e fatto costruire un quartier generale che è
+                anche la residenza del sindaco. I cittadini sono
+                <strong>felici</strong> e non immaginano una vita fuori da
+                Oasis.
               </p>
             </div>
           </div>
@@ -286,12 +292,12 @@
           border-bottom border-primary
         "
       >
-        <a class="nav-link" href="/index.html">Home</a>
-        <a class="nav-link" href="/descrizione.html">Descrizione</a>
-        <a class="nav-link" href="/storia.html">Storia</a>
-        <a class="nav-link" href="/servizi.html">Servizi</a>
-        <a class="nav-link" href="/eventi.html">Eventi</a>
-        <a class="nav-link" href="/unisciti.html">Unisciti a noi</a>
+        <a class="nav-link" href="./index.html">Home</a>
+        <a class="nav-link" href="./descrizione.html">Descrizione</a>
+        <a class="nav-link" href="./storia.html">Storia</a>
+        <a class="nav-link" href="./servizi.html">Servizi</a>
+        <a class="nav-link" href="./eventi.html">Eventi</a>
+        <a class="nav-link" href="./unisciti.html">Unisciti a noi</a>
       </nav>
       <!-- Copyright -->
       <p class="small text-center text-light py-3 mb-0">&copy; Oasis Inc.</p>
