--- a/formazione.html
+++ b/formazione.html
@@ -152,8 +152,10 @@
           <div class="mb-5">
             <h2 class="text-center">Le scuole</h2>
             <p class="lead text-center">
-              Gli psicologi sapranno poi indicarti l’unica direzione giusta per
-              le tue inclinazioni.
+              I nostri pluriqualificati psicologi sapranno indicarti l’unica
+              direzione giusta per sfruttare le tue inclinazioni. Non dovrai
+              fare altro nella vita che assecondarle e noi ti daremo gli
+              strumenti giusti per farlo.
             </p>
           </div>
 
@@ -249,12 +251,12 @@
           border-bottom border-primary
         "
       >
-        <a class="nav-link" href="/index.html">Home</a>
-        <a class="nav-link" href="/descrizione.html">Descrizione</a>
-        <a class="nav-link" href="/storia.html">Storia</a>
-        <a class="nav-link" href="/servizi.html">Servizi</a>
-        <a class="nav-link" href="/eventi.html">Eventi</a>
-        <a class="nav-link" href="/unisciti.html">Unisciti a noi</a>
+        <a class="nav-link" href="./index.html">Home</a>
+        <a class="nav-link" href="./descrizione.html">Descrizione</a>
+        <a class="nav-link" href="./storia.html">Storia</a>
+        <a class="nav-link" href="./servizi.html">Servizi</a>
+        <a class="nav-link" href="./eventi.html">Eventi</a>
+        <a class="nav-link" href="./unisciti.html">Unisciti a noi</a>
       </nav>
       <!-- Copyright -->
       <p class="small text-center text-light py-3 mb-0">&copy; Oasis Inc.</p>
