--- a/index.html
+++ b/index.html
@@ -117,7 +117,9 @@
           <h1 class="display-1">Oasis</h1>
           <h2 class="lead">La culla del tuo futuro</h2>
           <div>
-            <button class="btn btn-primary mt-3">Unisciti a noi</button>
+            <a class="btn btn-primary mt-3" href="unisciti.html"
+              >Unisciti a noi
+            </a>
           </div>
         </div>
       </section>
@@ -339,12 +341,12 @@
           border-bottom border-primary
         "
       >
-        <a class="nav-link" href="/index.html">Home</a>
-        <a class="nav-link" href="/descrizione.html">Descrizione</a>
-        <a class="nav-link" href="/storia.html">Storia</a>
-        <a class="nav-link" href="/servizi.html">Servizi</a>
-        <a class="nav-link" href="/eventi.html">Eventi</a>
-        <a class="nav-link" href="/unisciti.html">Unisciti a noi</a>
+        <a class="nav-link" href="./index.html">Home</a>
+        <a class="nav-link" href="./descrizione.html">Descrizione</a>
+        <a class="nav-link" href="./storia.html">Storia</a>
+        <a class="nav-link" href="./servizi.html">Servizi</a>
+        <a class="nav-link" href="./eventi.html">Eventi</a>
+        <a class="nav-link" href="./unisciti.html">Unisciti a noi</a>
       </nav>
       <!-- Copyright -->
       <p class="small text-center text-light py-3 mb-0">&copy; Oasis Inc.</p>
