corretto un difetto di visualizzazione in servizi

--- a/servizi.html
+++ b/servizi.html
@@ -168,7 +168,7 @@
         <div class="container pt-5">
           <h2 class="text-center">Altri servizi</h2>
           <div class="row gy-3 pt-4">
-            <div class="col text-center">
+            <div class="col-sm text-center">
               <img
                 class="img-fluid"
                 src="img/icona_servizi1.png"
@@ -176,7 +176,7 @@
               />
               <p>Pulizia dell'aria</p>
             </div>
-            <div class="col text-center">
+            <div class="col-sm text-center">
               <img
                 class="img-fluid"
                 src="img/icona_servizi2.png"
@@ -184,7 +184,7 @@
               />
               <p>Acqua potabile</p>
             </div>
-            <div class="col text-center">
+            <div class="col-sm text-center">
               <img
                 class="img-fluid"
                 src="img/icona_servizi3.png"
@@ -192,7 +192,7 @@
               />
               <p>Guardie della diciplina</p>
             </div>
-            <div class="col text-center">
+            <div class="col-sm text-center">
               <img
                 class="img-fluid"
                 src="img/icona_servizi4.png"
@@ -200,7 +200,7 @@
               />
               <p>Paesaggi naturali</p>
             </div>
-            <div class="col text-center">
+            <div class="col-sm text-center">
               <img
                 class="img-fluid"
                 src="img/icona_servizi5.png"
