--- a/storia.html
+++ b/storia.html
@@ -170,8 +170,8 @@
                 cibo. Gruppi di persone migrano vicino alle poche fonti d'acqua
                 rimaste, causando non pochi conflitti - spesso anche armati. La
                 <strong>progettazione</strong> della città è completata, il sito
-                di costruzione è stato individuato in un oasi del deserto
-                occidentale. Iniziano i lavori di realizzazione di Oasis.
+                di costruzione è stato individuato in un oasi del Deserto
+                Occidentale. Iniziano i lavori di realizzazione di Oasis.
               </p>
             </div>
           </div>
