--- a/eventi.html
+++ b/eventi.html
@@ -234,7 +234,7 @@
                   />
                   <div class="card-img-overlay px-0">
                     <h3 class="card-title bg-primary-alpha p-3">
-                      Conferenze sulla fertilità
+                      Seminario fertilità
                     </h3>
                   </div>
                 </div>
