--- a/benessere.html
+++ b/benessere.html
@@ -138,7 +138,7 @@
                 Hai brutti ricordi legati al passato fuori dalla cupola? Ci sono
                 certe giornate di duro lavoro in cui fatichi a reggere la
                 stanchezza? A volte senti dolore e non sai se è fisico o
-                psicologico? Appena entrato in OASIS ti verrà assegnato uno
+                psicologico? Appena entrato in Oasis ti verrà assegnato uno
                 <strong>psicoterapeuta personale</strong> che seguirà e
                 monitorerà il tuo percorso psicologico costantemente con un
                 colloquio settimanale.
@@ -212,7 +212,7 @@
           <h2 class="text-center pb-4">FAQ</h2>
           <h3 class="pb-2">È a pagamento?</h3>
           <p>
-            No, OASIS mette al primo posto la tua salute mentale e perciò sia
+            No, Oasis mette al primo posto la tua salute mentale e perciò sia
             appuntamento psicologico che trattamenti associati sono totalmente
             gratuiti.
           </p>
