--- a/formazione.html
+++ b/formazione.html
@@ -134,7 +134,7 @@
               <h2>Accesso al servizio</h2>
               <p>
                 Che tu abbia 0 o 99 anni o che tu sia uomo o donna, se aspiri ad
-                essere un cittadino di OASIS dovrai usufruire del nostro
+                essere un cittadino di Oasis dovrai usufruire del nostro
                 innovativo servizio di <strong>orientamento formativo</strong>.
                 Una volta ottenute tutte le carte per accedere alla nostra città
                 verrai sottoposto ad un
@@ -215,14 +215,14 @@
           <h2 class="text-center pb-4">FAQ</h2>
           <h3 class="pb-2">Posso cambiare?</h3>
           <p>
-            Non è possibile cambiare orientamento, poiché noi di OASIS teniamo
+            Non è possibile cambiare orientamento, poiché noi di Oasis teniamo
             molto alla tua <strong> stabilità psicologica</strong>.
           </p>
           <h3 class="pb-2">Quanto dura?</h3>
           <p>
             La durata del percorso di studi varia a seconda dei
             <strong>tuoi anni </strong>e della necessità che abbiamo di formarti
-            a 360 gradi e permetterti di mettere al servizio di OASIS le tue
+            a 360 gradi e permetterti di mettere al servizio di Oasis le tue
             incredibili capacità.
           </p>
           <h3 class="pb-2">E dopo la formazione?</h3>
