--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
             <div class="col-md">
               <h2 class="">Una nuova città</h2>
               <p class="">
-                OASIS nasce dopo la disfatta del mondo. L’uomo, avido e sempre
+                Oasis nasce dopo la disfatta del mondo. L’uomo, avido e sempre
                 più desideroso di controllo, ha soffocato a poco a poco il
                 Pianeta Terra. Noi siamo qui per <strong>proteggerti</strong> e
                 prenderci cura di te. ll nostro obiettivo è farti dimenticare la
@@ -179,7 +179,7 @@
             <div class="col-md">
               <h2 class="">Le nostre origini</h2>
               <p class="">
-                Lo sapevi che OASIS è stata pensata più di
+                Lo sapevi che Oasis è stata pensata più di
                 <strong>trent'anni fa</strong> da delle menti illuminate e
                 avveniristiche? Scopri insieme a noi come è nato l’ambizioso
                 progetto di <strong>salvare l’Umanità</strong> dal Mondo
