--- a/servizi.html
+++ b/servizi.html
@@ -126,7 +126,7 @@
 
                 <h3>Benessere</h3>
                 <p>
-                  Relax, tranquillità e pace dei sensi. OASIS è la città dove è
+                  Relax, tranquillità e pace dei sensi. Oasis è la città dove è
                   impossibile essere tristi e lo dimostriamo con il nostro
                   innovativo approccio psicologico. Non esistono problemi che
                   non possano essere risolti da un caldo bagno termale o da uno
@@ -149,10 +149,11 @@
 
                 <h3>Formazione</h3>
                 <p>
-                  Sperimenta, crea, comunica, ripara... OASIS ha bisogno delle
-                  tue abilità per crescere e ripopolare il Pianeta Terra. Ti
-                  indirizzeremo nella scuola giusta dopo averti sottoposto ad un
-                  test attitudinale per valutare i tuoi punti di forza.
+                  Sperimenta, crea, comunica, ripara... Oasis ha bisogno delle
+                  tue abilità per poter crescere e ripopolare il Pianeta Terra.
+                  Ti indirizzeremo nella scuola giusta dopo averti sottoposto ad
+                  un test attitudinale per valutare i tuoi punti di forza. Non
+                  sbaglierai percorso mai più nella vita.
                 </p>
               </div>
               <a href="./formazione.html" class="small-caps link-secondary"
