--- a/storia.html
+++ b/storia.html
@@ -129,15 +129,14 @@
               <h3 class="h2">Preludio</h3>
               <p>
                 Anno 2020, inizia la pandemia da
-                <strong>COVID-19</strong> COVID-19. Mentre le attenzioni del
-                mondo sono rivolte alla gestione dei contagi, un piccolo gruppo
-                di scenziati fa una scoperta spaventosa. Il riscaldamento
-                globale sta accelerando e le previsioni si avvereranno in
-                anticipo di almeno dieci anni. Alcuni
+                <strong>Covid-19</strong>. Mentre le attenzioni del mondo sono
+                rivolte alla gestione dei contagi, un piccolo gruppo di
+                scenziati fa una scoperta spaventosa. Il riscaldamento globale
+                sta accelerando e le previsioni si avvereranno in anticipo di
+                almeno dieci anni. Alcuni
                 <strong>imprenditori illuminati</strong>
                 iniziano a discutere di un nuovo progetto edilizio. La chiave di
-                tutto è
-                <strong>l’acqua.</strong>
+                tutto è l'<strong>acqua.</strong>
               </p>
             </div>
           </div>
@@ -160,7 +159,7 @@
               <h2 class="story-year">2030</h2>
             </div>
             <div class="col-md-5">
-              <h3 class="h2">Il progetto OASIS</h3>
+              <h3 class="h2">Il progetto Oasis</h3>
               <p>
                 Le <strong>previsioni scientifiche</strong> sul riscaldamento
                 globale si avverano in anticipo. Le
@@ -194,7 +193,7 @@
               <h2 class="story-year">2040</h2>
             </div>
             <div class="col-md-5">
-              <h3 class="h2">OASIS prende forma</h3>
+              <h3 class="h2">Oasis prende forma</h3>
               <p>
                 Oasis è ultimata. In un mondo
                 <strong>devastato da guerre</strong> Oasis è uno dei pochi
@@ -262,7 +261,7 @@
               <h2 class="story-year text-start">Oggi</h2>
             </div>
             <div class="col-md-5">
-              <h3 class="h2">Il sogno dei fondatori continua ad essere vivo</h3>
+              <h3 class="h2">Il sogno dei fondatori vive</h3>
               <p>
                 Negli anni l’amministrazione ha messo in piedi una
                 <strong>struttura organizzativa</strong> centralizzata per
