--- a/unisciti.html
+++ b/unisciti.html
@@ -142,7 +142,7 @@
                   <h3 class="lead">Candidati</h3>
                   <p>
                     Compila il form in questa pagina. Nel messaggio specifica
-                    perché sei interessato ad entrare in OASIS
+                    perché sei interessato ad entrare in Oasis
                   </p>
                 </li>
                 <li>
@@ -150,7 +150,7 @@
                   <p>
                     Ti contatteremo per un breve colloquio online. Ti faremo
                     delle domande sulle tue aspirazioni e su come pensi di
-                    contribuire a far crescere OASIS
+                    contribuire a far crescere Oasis
                   </p>
                 </li>
                 <li>
@@ -190,7 +190,7 @@
               <p>
                 Ricorda: la nostra parola d’ordine è accoglienza, ma abbiamo
                 bisogno che tu soddisfi i requisiti del nostro cittadino ideale.
-                OASIS deve crescere e può farlo solo grazie alle persone giuste.
+                Oasis deve crescere e può farlo solo grazie alle persone giuste.
               </p>
             </div>
             <div class="col-md col-lg-5">
