--- a/descrizione.html
+++ b/descrizione.html
@@ -217,7 +217,7 @@
         <div class="container pt-5 pb-3">
           <h2 class="text-center">Dove siamo</h2>
           <p class="text-center">
-            OASIS si trova nel mezzo del Deserto Occidentale, ma la sua
+            Oasis si trova nel mezzo del Deserto Occidentale, ma la sua
             posizione è e deve rimanere
             <strong>strettamente segreta</strong> per impedire che venga
             saccheggiata o attaccata dagli abitanti del Mondo Esterno in lotta
