--- a/benessere.html
+++ b/benessere.html
@@ -4,7 +4,15 @@
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-
+    <meta
+      name="description"
+      content="La nostra priorità è il tuo benessere mentale. Siamo o non siamo l’ultima città felice rimasta nel Pianeta Terra?
+    "
+    />
+    <meta
+      name="keywords"
+      content="benessere, terme, farmacia, medicina, relax"
+    />
     <!-- Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
