--- a/descrizione.html
+++ b/descrizione.html
@@ -4,7 +4,14 @@
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-
+    <meta
+      name="description"
+      content="Scopri la città dove i tuoi figli cresceranno e faranno parte dell’Elite che ripopolerà il Pianeta Terra. Siamo pronti ad ospitarti"
+    />
+    <meta
+      name="keywords"
+      content="descrizione, oasi, città, quartieri, posizione"
+    />
     <!-- Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
