--- a/eventi.html
+++ b/eventi.html
@@ -4,7 +4,16 @@
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="description"
+      content="Ad Oasis non c'è tempo per annoiarsi. Ti offriamo eventi non-stop per tutti i gusti, perché da noi è letteralmente impossibile essere infelici. 
 
+    "
+    />
+    <meta
+      name="keywords"
+      content="eventi, sorgente, cinema, fertilità, preghiera"
+    />
     <!-- Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
