--- a/formazione.html
+++ b/formazione.html
@@ -4,7 +4,15 @@
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-
+    <meta
+      name="description"
+      content="Vogliamo sviluppare appieno il tuo potenziale per rendere perfetta la generazione che dovrà ripopolare il Mondo Nuovo
+    "
+    />
+    <meta
+      name="keywords"
+      content="formazione, istruzione, accesso, inclinazioni, potenzialità"
+    />
     <!-- Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
