--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="description"
+      content="Oasis nasce dopo la disfatta del mondo. L’uomo, avido e sempre più desideroso di controllo, ha soffocato a poco a poco il Pianeta Terra. Noi siamo qui per proteggerti e prenderci cura di te. "
+    />
+    <meta
+      name="keywords"
+      content="homepage, presentazione, città, oasi, distopia"
+    />
     <!-- Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
@@ -273,7 +281,7 @@
                     class="card-img"
                   />
                   <div class="card-img-overlay">
-                    <h3 class="card-title">Sorgente di vita</h3>
+                    <h3 class="card-title h4">Sorgente di vita</h3>
                     <p class="card-text small">Venerdì 17 novembre</p>
                   </div>
                 </div>
@@ -289,7 +297,7 @@
                     class="card-img"
                   />
                   <div class="card-img-overlay">
-                    <h3 class="card-title">Cinema d'autore</h3>
+                    <h3 class="card-title h4">Cinema d'autore</h3>
                     <p class="card-text small">Sabato 2 dicembre</p>
                   </div>
                 </div>
@@ -305,7 +313,7 @@
                     class="card-img"
                   />
                   <div class="card-img-overlay">
-                    <h3 class="card-title">Preghiamo insieme</h3>
+                    <h3 class="card-title h4">Preghiamo insieme</h3>
                     <p class="card-text small">Ogni domenica</p>
                   </div>
                 </div>
