--- a/servizi.html
+++ b/servizi.html
@@ -4,7 +4,16 @@
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="description"
+      content="Per farti dimenticare qualsiasi problema e renderti utile alla nostra comunità vieni a scoprire i nostri innovativi servizi
 
+    "
+    />
+    <meta
+      name="keywords"
+      content="servizi, benessere, formazione, relax, istruzione"
+    />
     <!-- Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
