--- a/storia.html
+++ b/storia.html
@@ -4,7 +4,12 @@
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-
+    <meta
+      name="description"
+      content="Scopri in questa pagina la genesi dell’unica città che sopravviverà al Tempo e alla distruzione del Pianeta Terra
+    "
+    />
+    <meta name="keywords" content="storia, genesi, cronologia, tappe, anni" />
     <!-- Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
