--- a/unisciti.html
+++ b/unisciti.html
@@ -4,7 +4,14 @@
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-
+    <meta
+      name="description"
+      content="Scopri gli step necessari per entrare a far parte dell'èlite del Nuovo Mondo. Siamo qui per accogliere le tue potenzialità "
+    />
+    <meta
+      name="keywords"
+      content="form, unisciti, candidatura, ingresso, selezione"
+    />
     <!-- Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
