typo and file naming change

--- a/2_1-service_description.html
+++ b/2_1-service_description.html
@@ -35,7 +35,7 @@
     >
       <div class="container-fluid">
         <!-- Logo -->
-        <a href="index.html" class="mx-3 navbar_brand">
+        <a href="0-home.html" class="mx-3 navbar_brand">
           <img class="img-fluid" id="logo" src="img/LogoWhite.svg" alt="logo" />
         </a>
 
@@ -66,40 +66,40 @@
           <div class="offcanvas-body justify-content-lg-center">
             <ul class="navbar-nav">
               <li class="nav-item mx-lg-3">
-                <a href="descrizione.html" class="nav-link">Descrizione</a>
+                <a href="1-city_description.html" class="nav-link">Descrizione</a>
               </li>
               <li class="nav-item mx-lg-3">
-                <a href="storia.html" class="nav-link">Storia</a>
+                <a href="5-free_page.html" class="nav-link">Storia</a>
               </li>
               <li class="nav-item mx-lg-3 dropdown">
                 <a
-                  href="servizi.html"
+                  href="2-services_descriptions.html"
                   class="nav-link active dropdown-toggle"
                   data-bs-toggle="dropdown"
                   >Servizi</a
                 >
                 <ul class="dropdown-menu px-3">
                   <li>
-                    <a href="servizi.html" class="dropdown-item">Generale</a>
+                    <a href="2-services_descriptions.html" class="dropdown-item">Generale</a>
                   </li>
                   <li><hr class="dropdown-divider" /></li>
                   <li>
-                    <a href="formazione.html" class="dropdown-item"
+                    <a href="2_2-service-description.html" class="dropdown-item"
                       >Formazione</a
                     >
                   </li>
                   <li>
-                    <a href="benessere.html" class="dropdown-item active"
+                    <a href="2_1-service_description.html" class="dropdown-item active"
                       >Benessere</a
                     >
                   </li>
                 </ul>
               </li>
               <li class="nav-item mx-lg-3">
-                <a href="eventi.html" class="nav-link">Eventi</a>
+                <a href="4-free_page.html" class="nav-link">Eventi</a>
               </li>
               <li class="nav-item mx-lg-3">
-                <a href="unisciti.html" class="nav-link">Unisciti a noi</a>
+                <a href="3-city_access.html" class="nav-link">Unisciti a noi</a>
               </li>
             </ul>
           </div>
@@ -161,7 +161,7 @@
           <div class="mb-5">
             <h2 class="text-center">I trattamenti</h2>
             <p class="lead text-center">
-              Le terapie vengono somministrate sottoforma di pacchetti a seconda
+              Le terapie vengono somministrate sotto forma di pacchetti a seconda
               se il tuo problema è risolvibile con un trattamento benessere o
               necessita l’intervento della nostro avveniristico settore
               farmacologico.
@@ -185,7 +185,7 @@
                   di completo relax per dimenticare il mondo al di là della
                   cupola. Una volta assegnatoti questo trattamento, potrai
                   scegliere tra diversi pacchetti benessere: manicure, pedicure,
-                  massaggi. Ad Oasis ci prendiamo cura di te e vogliamo farti
+                  massaggi. A Oasis ci prendiamo cura di te e vogliamo farti
                   <strong>guarire</strong> da ogni preoccupazione.
                 </p>
               </div>
@@ -258,12 +258,12 @@
           border-bottom border-primary
         "
       >
-        <a class="nav-link" href="./index.html">Home</a>
-        <a class="nav-link" href="./descrizione.html">Descrizione</a>
-        <a class="nav-link" href="./storia.html">Storia</a>
-        <a class="nav-link" href="./servizi.html">Servizi</a>
-        <a class="nav-link" href="./eventi.html">Eventi</a>
-        <a class="nav-link" href="./unisciti.html">Unisciti a noi</a>
+        <a class="nav-link" href="0-home.html">Home</a>
+        <a class="nav-link" href="1-city_description.html">Descrizione</a>
+        <a class="nav-link" href="5-free_page.html">Storia</a>
+        <a class="nav-link" href="2-services_descriptions.html">Servizi</a>
+        <a class="nav-link" href="4-free_page.html">Eventi</a>
+        <a class="nav-link" href="3-city_access.html">Unisciti a noi</a>
       </nav>
       <!-- Copyright -->
       <p class="small text-center text-light py-3 mb-0">&copy; Oasis Inc.</p>
