--- a/0-home.html
+++ b/0-home.html
@@ -34,7 +34,7 @@
     >
       <div class="container-fluid">
         <!-- Logo -->
-        <a href="index.html" class="mx-3 navbar_brand">
+        <a href="0-home.html" class="mx-3 navbar_brand">
           <img class="img-fluid" id="logo" src="img/LogoWhite.svg" alt="logo" />
         </a>
 
@@ -65,38 +65,38 @@
           <div class="offcanvas-body justify-content-lg-center">
             <ul class="navbar-nav">
               <li class="nav-item mx-lg-3">
-                <a href="descrizione.html" class="nav-link">Descrizione</a>
+                <a href="1-city_description.html" class="nav-link">Descrizione</a>
               </li>
               <li class="nav-item mx-lg-3">
-                <a href="storia.html" class="nav-link">Storia</a>
+                <a href="5-free_page.html" class="nav-link">Storia</a>
               </li>
               <li class="nav-item mx-lg-3 dropdown">
                 <a
-                  href="servizi.html"
+                  href="2-services_descriptions.html"
                   class="nav-link dropdown-toggle"
                   data-bs-toggle="dropdown"
                   >Servizi</a
                 >
                 <ul class="dropdown-menu px-3">
                   <li>
-                    <a href="servizi.html" class="dropdown-item">Generale</a>
+                    <a href="2-services_descriptions.html" class="dropdown-item">Generale</a>
                   </li>
                   <li><hr class="dropdown-divider" /></li>
                   <li>
-                    <a href="formazione.html" class="dropdown-item"
+                    <a href="2_2-service-description.html" class="dropdown-item"
                       >Formazione</a
                     >
                   </li>
                   <li>
-                    <a href="benessere.html" class="dropdown-item">Benessere</a>
+                    <a href="2_1-service_description.html" class="dropdown-item">Benessere</a>
                   </li>
                 </ul>
               </li>
               <li class="nav-item mx-lg-3">
-                <a href="eventi.html" class="nav-link">Eventi</a>
+                <a href="4-free_page.html" class="nav-link">Eventi</a>
               </li>
               <li class="nav-item mx-lg-3">
-                <a href="unisciti.html" class="nav-link">Unisciti a noi</a>
+                <a href="3-city_access.html" class="nav-link">Unisciti a noi</a>
               </li>
             </ul>
           </div>
@@ -124,7 +124,7 @@
           <h1 class="display-1">Oasis</h1>
           <h2 class="lead">La culla del tuo futuro</h2>
           <div>
-            <a class="btn btn-primary mt-3" href="unisciti.html"
+            <a class="btn btn-primary mt-3" href="3-city_access.html"
               >Unisciti a noi
             </a>
           </div>
@@ -148,13 +148,13 @@
                 Oasis nasce dopo la disfatta del mondo. L’uomo, avido e sempre
                 più desideroso di controllo, ha soffocato a poco a poco il
                 Pianeta Terra. Noi siamo qui per <strong>proteggerti</strong> e
-                prenderci cura di te. ll nostro obiettivo è farti dimenticare la
+                prenderci cura di te. Il nostro obiettivo è farti dimenticare la
                 catastrofe che ha distrutto il mondo e farti vivere una nuova
                 vita di benessere fisico e mentale,
                 <strong>lontano dal Mondo Esterno</strong>.
               </p>
               <div class="text-end">
-                <a href="descrizione.html" class="small-caps link-secondary">
+                <a href="1-city_description.html" class="small-caps link-secondary">
                   Scopri Oasis
                   <i class="bi-arrow-right fw-bold"></i>
                 </a>
@@ -193,7 +193,7 @@
                 Esterno.
               </p>
               <div class="d-flex justify-content-end">
-                <a href="storia.html" class="small-caps link-secondary">
+                <a href="5-free_page.html" class="small-caps link-secondary">
                   Leggi la nostra storia
                   <i class="bi-arrow-right fw-bold"></i>
                 </a>
@@ -257,7 +257,7 @@
               <div
                 class="d-flex justify-content-center justify-content-md-start"
               >
-                <a href="servizi.html" class="btn btn-primary"
+                <a href="2-services_descriptions.html" class="btn btn-primary"
                   >Scopri tutti i servizi</a
                 >
               </div>
@@ -321,7 +321,7 @@
             </div>
           </div>
           <div class="text-end">
-            <a href="eventi.html" class="small-caps link-secondary"
+            <a href="4-free_page.html" class="small-caps link-secondary"
               >Scopri gli ultimi eventi
               <i class="bi-arrow-right fw-bold"></i>
             </a>
@@ -335,7 +335,7 @@
           <div class="d-flex flex-column align-items-center">
             <h2 class="text-light">Entra in Oasis</h2>
             <p class="text-light py-3">Cosa aspetti?</p>
-            <a href="unisciti.html" class="btn btn-primary"> Unisciti a noi </a>
+            <a href="3-city_access.html" class="btn btn-primary"> Unisciti a noi </a>
           </div>
         </div>
       </section>
@@ -356,12 +356,12 @@
           border-bottom border-primary
         "
       >
-        <a class="nav-link" href="./index.html">Home</a>
-        <a class="nav-link" href="./descrizione.html">Descrizione</a>
-        <a class="nav-link" href="./storia.html">Storia</a>
-        <a class="nav-link" href="./servizi.html">Servizi</a>
-        <a class="nav-link" href="./eventi.html">Eventi</a>
-        <a class="nav-link" href="./unisciti.html">Unisciti a noi</a>
+        <a class="nav-link" href="./0-home.html">Home</a>
+        <a class="nav-link" href="1-city_description.html">Descrizione</a>
+        <a class="nav-link" href="5-free_page.html">Storia</a>
+        <a class="nav-link" href="2-services_descriptions.html">Servizi</a>
+        <a class="nav-link" href="4-free_page.html">Eventi</a>
+        <a class="nav-link" href="3-city_access.html">Unisciti a noi</a>
       </nav>
       <!-- Copyright -->
       <p class="small text-center text-light py-3 mb-0">&copy; Oasis Inc.</p>
@@ -376,100 +376,3 @@
     <script src="script.js"></script>
   </body>
 </html>
-
-<!-- Storia
-      <section>
-        <div class="container py-5">
-          <h2 class="">Scopri i quartieri di Oasis</h2>
-          <div class="container py-4">
-            <div class="row g-3">
-              <div
-                class="
-                  col-md-6
-                  d-flex
-                  flex-column flex-md-row
-                  justify-content-center
-                  align-items-center align-items-md-start
-                "
-              >
-                <img class="img-fluid p-3 py-md-0" src="/icons/techne.svg" />
-                <div class="d-flex flex-column align-items-center">
-                  <h3 class="align-self-md-start">Techne</h3>
-                  <p class="align-self-start">
-                    Il quartiere del pensiero razionale e della scienza:
-                    officine, aziende, industrie. Qui è dove costruiamo OASIS e
-                    progettiamo il suo futuro, ancora più grande
-                  </p>
-                </div>
-              </div>
-              <div
-                class="
-                  col-md-6
-                  d-flex
-                  flex-column flex-md-row
-                  justify-content-center
-                  align-items-center align-items-md-start
-                "
-              >
-                <img class="img-fluid p-3 py-md-0" src="/icons/sapientia.svg" />
-                <div class="d-flex flex-column align-items-center">
-                  <h3 class="align-self-md-start">Sapientia</h3>
-                  <p class="align-self-start">
-                    Conoscenza e sete di sapere. Dalle scuole elementari alle
-                    Università, offriamo ambienti stimolanti per tutti i generi
-                    di personalità e inclinazione.
-                  </p>
-                </div>
-              </div>
-
-              <div
-                class="
-                  col-md-6
-                  d-flex
-                  flex-column flex-md-row
-                  justify-content-center
-                  align-items-center align-items-md-start
-                "
-              >
-                <img class="img-fluid p-3 py-md-0" src="/icons/ars.svg" />
-                <div class="d-flex flex-column align-items-center">
-                  <h3 class="align-self-md-start">Ars</h3>
-                  <p class="align-self-start">
-                    L’arte e la bellezza sono nell’aria. Cinema, teatri, mostre
-                    e sale da concerti. Lascia che il tuo spirito si rilassi e
-                    dimentichi tutto di fronte alla bellezza
-                  </p>
-                </div>
-              </div>
-              <div
-                class="
-                  col-md-6
-                  d-flex
-                  flex-column flex-md-row
-                  justify-content-center
-                  align-items-center align-items-md-start
-                "
-              >
-                <img class="img-fluid p-3 py-md-0" src="/icons/gustibus.svg" />
-                <div class="d-flex flex-column align-items-center">
-                  <h3 class="align-self-md-start">Gustibus</h3>
-                  <p class="align-self-start">
-                    Il buon cibo è l’ingrediente perfetto per ritornare ad uno
-                    stile di vita appagante. Qui troverai le cucine di tutto il
-                    mondo. Ce n’è davvero per tutti i gusti
-                  </p>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="d-flex justify-content-end">
-            <a
-              href="storia.html"
-              
-              class="link-secondary"
-              >Scopri i quartieri di Oasis
-              <i class="bi-arrow-right  fw-bold"></i>
-            </a>
-          </div>
-        </div>
-      </section> -->
