--- a/5-free_page.html
+++ b/5-free_page.html
@@ -32,7 +32,7 @@
     >
       <div class="container-fluid">
         <!-- Logo -->
-        <a href="index.html" class="mx-3 navbar_brand">
+        <a href="0-home.html" class="mx-3 navbar_brand">
           <img class="img-fluid" id="logo" src="img/LogoWhite.svg" alt="logo" />
         </a>
 
@@ -63,38 +63,38 @@
           <div class="offcanvas-body justify-content-lg-center">
             <ul class="navbar-nav">
               <li class="nav-item mx-lg-3">
-                <a href="descrizione.html" class="nav-link">Descrizione</a>
+                <a href="1-city_description.html" class="nav-link">Descrizione</a>
               </li>
               <li class="nav-item mx-lg-3">
-                <a href="storia.html" class="nav-link active">Storia</a>
+                <a href="5-free_page.html" class="nav-link active">Storia</a>
               </li>
               <li class="nav-item mx-lg-3 dropdown">
                 <a
-                  href="servizi.html"
+                  href="2-services_descriptions.html"
                   class="nav-link dropdown-toggle"
                   data-bs-toggle="dropdown"
                   >Servizi</a
                 >
                 <ul class="dropdown-menu px-3">
                   <li>
-                    <a href="servizi.html" class="dropdown-item">Generale</a>
+                    <a href="2-services_descriptions.html" class="dropdown-item">Generale</a>
                   </li>
                   <li><hr class="dropdown-divider" /></li>
                   <li>
-                    <a href="formazione.html" class="dropdown-item"
+                    <a href="2_2-service-description.html" class="dropdown-item"
                       >Formazione</a
                     >
                   </li>
                   <li>
-                    <a href="benessere.html" class="dropdown-item">Benessere</a>
+                    <a href="2_1-service_description.html" class="dropdown-item">Benessere</a>
                   </li>
                 </ul>
               </li>
               <li class="nav-item mx-lg-3">
-                <a href="eventi.html" class="nav-link">Eventi</a>
+                <a href="4-free_page.html" class="nav-link">Eventi</a>
               </li>
               <li class="nav-item mx-lg-3">
-                <a href="unisciti.html" class="nav-link">Unisciti a noi</a>
+                <a href="3-city_access.html" class="nav-link">Unisciti a noi</a>
               </li>
             </ul>
           </div>
@@ -136,7 +136,7 @@
                 Anno 2020, inizia la pandemia da
                 <strong>Covid-19</strong>. Mentre le attenzioni del mondo sono
                 rivolte alla gestione dei contagi, un piccolo gruppo di
-                scenziati fa una scoperta spaventosa. Il riscaldamento globale
+                scienziati fa una scoperta spaventosa. Il riscaldamento globale
                 sta accelerando e le previsioni si avvereranno in anticipo di
                 almeno dieci anni. Alcuni
                 <strong>imprenditori illuminati</strong>
@@ -168,7 +168,7 @@
               <p>
                 Le <strong>previsioni scientifiche</strong> sul riscaldamento
                 globale si avverano in anticipo. Le
-                <strong>temperature globali</strong> si alzano di 3 gradi
+                <strong>temperature globali</strong> si alzano di tre gradi
                 centigradi e il surriscaldamento è irreversibile. Il processo di
                 desertificazione accelera ed è sempre più difficile produrre
                 cibo. Gruppi di persone migrano vicino alle poche fonti d'acqua
@@ -296,12 +296,12 @@
           border-bottom border-primary
         "
       >
-        <a class="nav-link" href="./index.html">Home</a>
-        <a class="nav-link" href="./descrizione.html">Descrizione</a>
-        <a class="nav-link" href="./storia.html">Storia</a>
-        <a class="nav-link" href="./servizi.html">Servizi</a>
-        <a class="nav-link" href="./eventi.html">Eventi</a>
-        <a class="nav-link" href="./unisciti.html">Unisciti a noi</a>
+        <a class="nav-link" href="0-home.html">Home</a>
+        <a class="nav-link" href="1-city_description.html">Descrizione</a>
+        <a class="nav-link" href="./5-free_page.html">Storia</a>
+        <a class="nav-link" href="2-services_descriptions.html">Servizi</a>
+        <a class="nav-link" href="4-free_page.html">Eventi</a>
+        <a class="nav-link" href="3-city_access.html">Unisciti a noi</a>
       </nav>
       <!-- Copyright -->
       <p class="small text-center text-light py-3 mb-0">&copy; Oasis Inc.</p>
