Ultima modifica img

--- a/2_1-service_description.html
+++ b/2_1-service_description.html
@@ -167,7 +167,7 @@
               <div>
                 <div class="text-center">
                   <img
-                    src="img/Image1_Benessere.jpg"
+                    src="img/img_ben1.jpg"
                     class="img-fluid mb-4"
                     alt="immagine trattamenti termali"
                   />
@@ -189,7 +189,7 @@
               <div>
                 <div class="text-center">
                   <img
-                    src="img/Image-Benessere2.jpg"
+                    src="img/img_ben2.jpg"
                     class="img-fluid mb-4"
                     alt="immagine trattamenti farmacologici"
                   />
