--- a/2_2-service-description.html
+++ b/2_2-service-description.html
@@ -168,7 +168,7 @@
               <div>
                 <div class="text-center">
                   <img
-                    src="img/img-formazione1.jpg"
+                    src="img/img_formazione1.jpg"
                     class="img-fluid mb-4"
                     alt="immagine scuola Manus"
                   />
@@ -192,7 +192,7 @@
               <div>
                 <div class="text-center">
                   <img
-                    src="img/img-Intellectus.jpg"
+                    src="img/img_formazione2.jpg"
                     class="img-fluid mb-4"
                     alt="immagine scuola Intellectus"
                   />
