--- a/0-home.html
+++ b/0-home.html
@@ -25,12 +25,7 @@
   </head>
   <body>
     <header
-      class="
-        navbar navbar-expand-lg navbar-dark
-        bg-transparent
-        fixed-top
-        link-white
-      "
+      class="navbar navbar-expand-lg navbar-dark bg-transparent fixed-top link-white"
     >
       <div class="container-fluid">
         <!-- Logo -->
@@ -65,7 +60,9 @@
           <div class="offcanvas-body justify-content-lg-center">
             <ul class="navbar-nav">
               <li class="nav-item mx-lg-3">
-                <a href="1-city_description.html" class="nav-link">Descrizione</a>
+                <a href="1-city_description.html" class="nav-link"
+                  >Descrizione</a
+                >
               </li>
               <li class="nav-item mx-lg-3">
                 <a href="5-free_page.html" class="nav-link">Storia</a>
@@ -79,7 +76,9 @@
                 >
                 <ul class="dropdown-menu px-3">
                   <li>
-                    <a href="2-services_descriptions.html" class="dropdown-item">Generale</a>
+                    <a href="2-services_descriptions.html" class="dropdown-item"
+                      >Generale</a
+                    >
                   </li>
                   <li><hr class="dropdown-divider" /></li>
                   <li>
@@ -88,7 +87,9 @@
                     >
                   </li>
                   <li>
-                    <a href="2_1-service_description.html" class="dropdown-item">Benessere</a>
+                    <a href="2_1-service_description.html" class="dropdown-item"
+                      >Benessere</a
+                    >
                   </li>
                 </ul>
               </li>
@@ -111,15 +112,7 @@
         id="hero-home"
       >
         <div
-          class="
-            hero-content
-            bg-tertiary
-            d-flex
-            flex-column
-            justify-content-center
-            align-items-center
-            text-light text-center
-          "
+          class="hero-content bg-tertiary d-flex flex-column justify-content-center align-items-center text-light text-center"
         >
           <h1 class="display-1">Oasis</h1>
           <h2 class="lead">La culla del tuo futuro</h2>
@@ -154,7 +147,10 @@
                 <strong>lontano dal Mondo Esterno</strong>.
               </p>
               <div class="text-end">
-                <a href="1-city_description.html" class="small-caps link-secondary">
+                <a
+                  href="1-city_description.html"
+                  class="small-caps link-secondary"
+                >
                   Scopri Oasis
                   <i class="bi-arrow-right fw-bold"></i>
                 </a>
@@ -168,13 +164,7 @@
       <section class="bg-primary">
         <div class="container py-5">
           <div
-            class="
-              row
-              flex-md-row-reverse
-              align-items-center
-              gy-5 gy-md-0
-              gx-md-5
-            "
+            class="row flex-md-row-reverse align-items-center gy-5 gy-md-0 gx-md-5"
           >
             <div class="col-md text-center">
               <img
@@ -207,19 +197,13 @@
       <section class="bg-light-gray">
         <div class="container p-5">
           <div
-            class="
-              row
-              gy-5 gy-lg-0
-              gx-lg-5
-              align-items-center
-              justify-content-between
-            "
+            class="row gy-5 gy-lg-0 gx-lg-5 align-items-center justify-content-between"
           >
             <div class="col-lg-6">
-              <div class="composition-servizi clearfix">
+              <div class="composition clearfix">
                 <img
                   class="img-fluid float-start"
-                  src="./img/img_home4.png"
+                  src="./img/img_home4.jpg"
                   alt="immagine servizio istruzione"
                 />
                 <img
@@ -335,7 +319,9 @@
           <div class="d-flex flex-column align-items-center">
             <h2 class="text-light">Entra in Oasis</h2>
             <p class="text-light py-3">Cosa aspetti?</p>
-            <a href="3-city_access.html" class="btn btn-primary"> Unisciti a noi </a>
+            <a href="3-city_access.html" class="btn btn-primary">
+              Unisciti a noi
+            </a>
           </div>
         </div>
       </section>
@@ -348,13 +334,7 @@
       </div>
       <!-- Links -->
       <nav
-        class="
-          nav
-          flex-column flex-md-row
-          align-items-center
-          justify-content-md-center
-          border-bottom border-primary
-        "
+        class="nav flex-column flex-md-row align-items-center justify-content-md-center border-bottom border-primary"
       >
         <a class="nav-link" href="./0-home.html">Home</a>
         <a class="nav-link" href="1-city_description.html">Descrizione</a>
