--- a/1-city_description.html
+++ b/1-city_description.html
@@ -34,7 +34,7 @@
     >
       <div class="container-fluid">
         <!-- Logo -->
-        <a href="0-home.html" class="mx-3 navbar_brand">
+        <a href="index.html" class="mx-3 navbar_brand">
           <img class="img-fluid" id="logo" src="img/LogoWhite.svg" alt="logo" />
         </a>
 
@@ -252,7 +252,7 @@
           border-bottom border-primary
         "
       >
-        <a class="nav-link" href="0-home.html">Home</a>
+        <a class="nav-link" href="index.html">Home</a>
         <a class="nav-link" href="./1-city_description.html">Descrizione</a>
         <a class="nav-link" href="5-free_page.html">Storia</a>
         <a class="nav-link" href="2-services_descriptions.html">Servizi</a>
